# BitTensor

./: CMakeLists.txt  README.md  setup.py
benchmark/: usage.py
examples/: pytorch_integration.py
include/: packed_tensor.hpp
include/kernels/: packed_ops.hpp
pybind/: bindings.cpp
src/: packed_tensor.hpp
src/torch/: bindings.cpp
tests/: packed_tensor_test.cpp
tests/cpp/: CMakeLists.txt  packed_tensor_test.cpp
